styles.css
@import url("https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&family=Pirata+One&display=swap");
:root {
    --dark-color: #0b0a08;
    --light-color: #cbb78e;
}

/* Mobile / Base Styles */

* {
    color: var(--dark-color);
    font-family: "IM Fell DW Pica SC", serif;
    margin: 0px;
    padding: 0px;
}

body {
    align-items: center;
    background-position: center;
    background-size: cover;
    display: flex;
    justify-content: center;

    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
        url("./images/wood.webp");
}

main {
    background-position: center;
    background-size: cover;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    max-width: 80vw;
    padding: 1.5rem 0.5rem 0.5rem 0.5rem;

    background-image: linear-gradient(
            rgba(192, 173, 134, 0.5),
            rgba(192, 173, 134, 0.5)
        ),
        url("./images/paper.png");
}

h1,
h2,
h3 {
    font-family: "UnifrakturMaguntia", cursive;
    text-align: center;
}

h1 {
    font-size: 2.75rem;
}

h2 {
    font-size: 1.75rem;
}

h3 {
    font-size: 1.5rem;
}

article {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

section {
    border: 1.5px solid black;
    padding: 0.5rem;
}

ul {
    padding-left: 2rem;
}

button {
    background-color: var(--dark-color);
    border: none;
    color: var(--light-color);
    padding: 1rem 2.5rem;
}

nav {
    background-color: var(--dark-color);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    padding: 1rem;
}

nav > a {
    color: var(--light-color);
    text-decoration: none;
}

p,
ul {
    margin-bottom: 0.5rem;
}

blockquote {
    font-style: italic;
}

.title {
    font-family: "UnifrakturMaguntia", cursive;
    font-size: 2.5rem;
    padding: 0px;
}

.subtitle {
    font-family: "IM Fell DW Pica SC", serif;
    font-size: 1.25rem;
    margin-bottom: -1.5rem;
}

.img-container {
    display: flex;
    justify-content: center;
}

.img {
    filter: sepia(100%);
    width: 100%;
}

.buttons {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    justify-content: space-evenly;
}

.buttons > button {
    max-width: 100%;
}

.quote {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.top-separator {
    margin-top: -1rem;
}

.separator {
    border-bottom: 2px solid var(--dark-color);
    border-top: 1px solid var(--dark-color);
    height: 0.25rem;
}

/* Tablet Styles */
@media screen and (min-width: 768px) {
    body {
        background-color: lightgray;
    }

    article {
        display: grid;
        grid-template-columns: 50% 1fr 1fr;

        grid-template-areas:
            "gridpicture gridpicture gridpicture"
            "gridmain gridside1 gridside1"
            "gridmain gridside2 gridside2";
    }

    .grid-picture {
        grid-area: gridpicture;
    }

    .grid-main {
        grid-area: gridmain;
    }

    .grid-side1 {
        grid-area: gridside1;
    }

    .grid-side2 {
        grid-area: gridside2;
    }

    .img {
        max-width: 75%;
        object-fit: cover;
    }

    .buttons > button {
        width: 100%;
    }

    .separator {
        border-bottom: 3px solid var(--dark-color);
        border-top: 2px solid var(--dark-color);
        height: 0.25rem;
    }
}

/* Desktop Styles */
@media screen and (min-width: 1000px) {
    body {
        align-items: center;
        display: flex;
        height: 100vh;
        justify-content: center;
    }

    article {
        display: grid;
        grid-template-columns: 33% 1fr 1fr;

        grid-template-areas:
            "gridpicture gridmain gridside1"
            "gridpicture gridmain gridside2";
    }

    .img {
        max-width: 100%;
    }
}

